Project

General

Profile

Actions

Bug #56480

closed

std::shared_mutex deadlocks on Windows

Added by Lucian Petrut almost 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
common
Target version:
% Done:

100%

Source:
Tags:
Backport:
quincy pacific
Regression:
No
Severity:
3 - minor
Reviewed:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The winpthreads shared mutex implementation causes deadlocks on Windows [1]2. Specifically, async RBD IO calls are hanging. This also prevents the images from being unmounted.

One possible workaround would be to use boost::shared_mutex with MinGW builds.

[1] https://github.com/cloudbase/wnbd/issues/63#issuecomment-1161547102
[2] https://github.com/msys2/MINGW-packages/issues/3319
Trace: https://pastebin.com/raw/i3jpTyS3


Files

i3jpTyS3 (92.4 KB) i3jpTyS3 Ilya Dryomov, 07/14/2022 07:01 PM

Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #57053: pacific: std::shared_mutex deadlocks on WindowsResolvedLucian PetrutActions
Copied to Ceph - Backport #57054: quincy: std::shared_mutex deadlocks on WindowsResolvedLucian PetrutActions
Actions #1

Updated by Ilya Dryomov almost 2 years ago

  • Subject changed from shared mutex deadlocks on Windows to std::shared_mutex deadlocks on Windows
  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 46989
Actions #2

Updated by Ilya Dryomov almost 2 years ago

Adding gdb stack trace dump as an attachment in case pastebin expires.

Actions #3

Updated by Lucian Petrut over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Lucian Petrut over 1 year ago

  • Copied to Backport #57053: pacific: std::shared_mutex deadlocks on Windows added
Actions #5

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57054: quincy: std::shared_mutex deadlocks on Windows added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #7

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 90 to 100
  • Tags deleted (backport_processed)
Actions

Also available in: Atom PDF